test/semantic-errors/1.pas
program p;
begin writeln(x)end.
